--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,18 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
 
-    "types": ["vite-plugin-svgr/client"]
+    "types": ["vite-plugin-svgr/client"],
+
+    "baseUrl": ".",
+    "paths": {
+      "@Components/*": ["src/Components/*"],
+      "@Icons/*": ["src/Icons/*"],
+      "@Layouts/*": ["src/Layouts/*"],
+      "@Page/*": ["src/Page/*"],
+      "@Styles/*": ["src/Styles/*"],
+      "@/*": ["src/*"]
+    }
   },
-  "include": ["src", "svg.d.ts"],
+  "include": ["src", "svg.d.ts", "**/*.ts", "**/*.tsx"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
