--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-form": "^0.0.3",
     "@stitches/react": "^1.2.8",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
