--- a/package.json
+++ b/package.json
@@ -6,16 +6,20 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "testbuild": "vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-form": "^0.0.3",
     "@stitches/react": "^1.2.8",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.17.0"
+    "react-merge-refs": "^2.1.1",
+    "react-router-dom": "^6.17.0",
+    "react-use-measure": "^2.1.1"
   },
   "devDependencies": {
     "@svgr/rollup": "^8.1.0",
