--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,6 +36,7 @@
       "@Store/*": ["src/Store/*"],
       "@Styles/*": ["src/Styles/*"],
       "@Types/*": ["src/Types/*"],
+      "@Utils/*": ["src/Utils/*"],
       "@/*": ["src/*"]
     }
   },
